work on locations details avatar sizing ---- flex wrap for comments still needs to be fixed

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,158 +1,25 @@
 * body {
-  box-sizing: border-box;
-  margin: 0 !important;
-  font-family: 'brandon-grotesque'
+    box-sizing: border-box;
+    margin: 0 !important;
+    font-family: "brandon-grotesque";
 }
-:root #root{
-  /* background-color: #fff1b4; */
-  background-color: #f9f7ea;
- 
+:root #root {
+    /* background-color: #fff1b4; */
+    background-color: #f9f7ea;
+    font-family: 'Times New Roman', Times, sans-serif;
+    padding: 0;
+    /*  background-color: */
+    /* background-color: #fb6c45; */
+    /* background-color: #fff1b4 !important; */
+    /* background-color: #f9f7ea; */
 }
-
 
 html {
-  scroll-behavior: smooth;
-  /* background-color: #fff1b4; */
- font-family: 'brandon-grotesque';
-  /*  background-color: */
+    scroll-behavior: smooth;
+    /* background-color: #fff1b4; */
+    font-family: "brandon-grotesque";
+    /*  background-color: */
     /* background-color: #fb6c45; */
     /* background-color: #fff1b4 !important; */
     background-color: #f9f7ea;
 }
-/* html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-} */
-/*#700F11; #fbd345;#fb6c45;#fff1b4; */
-/*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-/* footer > img.footer {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  
-} */
-
-/* #1ed760 */
-/* div#root {
-  #fbda21;
-  background: black;
-} */
-/* a,
-a:hover,
-a:visited,
-a:link,
-a:active {
-  text-decoration: none;
-}
-
-*/
-/*  */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .row {
-  display: flex;
-}
-
-.column {
-  flex: 50%;
-  padding: 5px;
-}
-
-.right,
-.left {
-  height: 100vh;
-  width: 100%;
-}
-
-.left {
-  background: red;
-}
-
-.right {
-  background: blue;
-} */
-/* 
-#main-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: row wrap;
-  max-width: 100%;
-  border-radius: 6px;
-} */
-
-/* img {
-  display: flex;
-  align-items: flex-start;
-}
-*/
-/* .column {
-  flex-direction: column;
-}
-
-.row {
-  flex-direction: row;
-}
-
-.flex {
-  display: flex;
-}
-
-.grid {
-  display: grid;
-} */
-
-/* .card-container {
-  display: flex;
-  max-height: 450px;
-  align-items: center;
-  flex-direction: column-reverse;
-}
-
-*/
